package com.dev.alan.patterns.structural.adapter;

public interface DataProcessor {

    String process();
}
